--- a/csv2json/package.json
+++ b/csv2json/package.json
@@ -1,7 +1,7 @@
 {
   "name": "csv2json",
   "version": "1.0.0",
-  "description": "",
+  "description": "store NFT image to IPFS, create Metadata and store data to be shown in API response to mongo DB",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,17 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.2",
     "buffer": "^6.0.3",
     "dotenv": "^16.3.1",
-    "ethers": "^6.9.0",
     "fs": "^0.0.1-security",
-    "keccak256": "^1.0.6",
-    "mime": "^4.0.0",
-    "mime-types": "^2.1.35",
+    "mongoose": "^8.0.3",
     "nft.storage": "^7.1.1",
     "papaparse": "^5.4.1",
-    "path": "^0.12.7",
-    "superagent": "^8.1.2"
+    "path": "^0.12.7"
   }
 }
